oothing to commit, working tree clean proyecto nothing to commit, working tree clean

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,user-scalable=no">
-  <title>Juego de evaluacion</title>
+  <title>Juego de evaluacion </title>
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/estilos.css">
 
 
 </head>
 <body>
+  <!-- Es el contenedor -->
   <div class="main-container">
     <h1 class="main-titulo">Match Game</h1>
 
