mi proyecto juego

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <!-- Es el contenedor -->
+  <!-- Es el contenedor Padre  -->
   <div class="main-container">
     <h1 class="main-titulo">Match Game</h1>
 
